<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_MovieInformation">Movie Informations</string>
    <string name="content_authority">com.pklein.popularmovies.app</string>

    <!-- Content descriptions-->
    <string name="movie_picture_content_description">Movie Picture</string>
    <string name="play_picture_content_description">Play Trailer Picture</string>
    <string name="favorite_picture_content_description">Button to add Movie to favorite</string>
    <string name="rating_bar_content_description">Vote Average</string>
    <string name="title_content_description">Title</string>
    <string name="original_title_content_description">Original Title</string>
    <string name="vote_content_description">Vote</string>
    <string name="ProgressBar_content_description">ProgressBar for loading Poster</string>
    <string name="release_date_label"> Release Date : </string>
    <string name="overview_label"> Overview : </string>
    <string name="author_label"> Author</string>
    <string name="content_label"> Content</string>
    <string name="name_label"> Name</string>
    <string name="language_label"> Language : </string>
    <string name="error_message"> An error has occurred. Please check your Internet Connection.</string>

    <plurals name="votes">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>

    <string name="release_date">%1$s/%2$s/%3$s </string>

    <!-- Toast -->
    <string name="delete_favorite"> Delete from Favorite </string>
    <string name="save_favorite"> Saved as Favorite </string>
    <string name="error_favorite"> An Error has Occurred</string>

    <!-- Menu -->
    <string name="action_top_rated"> Top Rated </string>
    <string name="action_popular"> Most Popular </string>
    <string name="action_favorite"> Favorites </string>

</resources>
