<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_iv_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:src="@drawable/play"
            android:contentDescription="@string/play_picture_content_description"
            android:scaleType="centerCrop"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="3dp"
            tools:text="@string/name_label"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:id="@+id/tv_clip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="3dp"
            tools:text="@string/content_label"
            android:textSize="12sp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/colorBluePale"
            />
        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="3dp"
            tools:text="@string/language_label"
            android:textSize="12sp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/colorBluePale"
            />
    </GridLayout>
</FrameLayout>