<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.pklein.popularmovies.MovieInformation"
    >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="7">

        <ImageView
            android:id="@+id/image_iv_back"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_picture_content_description"
            android:scaleType="centerCrop"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:layout_gravity="start|top"
            />

        <ImageView
            android:id="@+id/image_iv_thumbnail"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_picture_content_description"
            android:scaleType="centerCrop"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowSpan="4"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="1"
            tools:text="Title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="fill_horizontal"
            android:textColor="@color/colorWhite"
             />

        <TextView
            android:id="@+id/tv_title_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="5dp"
            tools:text="original title"
            android:textSize="12sp"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:layout_gravity="start"
            android:textColor="@color/colorBluePale"
            />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="5dp"
            tools:text="@string/release_date_label"
            android:textSize="12sp"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:layout_gravity="start"
            android:textColor="@color/colorBluePale"
            />
        <RatingBar
            android:id="@+id/ratingBar"
            android:theme="@style/RatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:contentDescription="@string/rating_bar_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0.0"
            android:padding="1dp"
            android:layout_margin="5dp"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="start"
            />

        <TextView
            android:id="@+id/tv_vote_counting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="5dp"
            tools:text="vote"
            android:textSize="12sp"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_gravity="start"
            android:textColor="@color/colorBluePale"
            />

        <TextView
            android:id="@+id/tv_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="10dp"
            tools:text="Release_date"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/overview_label"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="5"
            android:layout_gravity="start"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_margin="10dp"
            tools:text="overview"
            android:textSize="12sp"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="6"
            android:layout_gravity="start"
            android:textColor="@color/colorBluePale"
            />
    </GridLayout>
</ScrollView>
